clients.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mtls-pod
spec:
  containers:
  - name: client
    image: governmentpaas/curl-ssl
    command: ["/bin/sleep", "3650d"]
---
apiVersion: v1
kind: Pod
metadata:
  name: no-mtls-pod
  annotations:
   sidecar.istio.io/inject: "false"
spec:
  containers:
  - name: client
    image: governmentpaas/curl-ssl
    command: ["/bin/sleep", "3650d"]
