hello-app-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-v2
spec:
  selector:
    matchLabels:
      run: hello-app
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        run: hello-app
        version: v2
    spec:
      containers:
      - name: hello-app
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080
