hello-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    run: hello-app
  sessionAffinity: None
  type: ClusterIP
