hello-app-split-20-80.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-app
spec:
  hosts:
  - "*"
  gateways:
  - hello-app-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        subset: v1
        host: hello-app
        port:
          number: 80
      weight: 20
    - destination:
        subset: v2
        host: hello-app
        port:
          number: 80
      weight: 80
